--- a/taigenteikoku/src/output.css
+++ b/taigenteikoku/src/output.css
@@ -197,6 +197,12 @@
   .top-1\/2 {
     top: calc(1/2 * 100%);
   }
+  .top-1\/3 {
+    top: calc(1/3 * 100%);
+  }
+  .top-2\/5 {
+    top: calc(2/5 * 100%);
+  }
   .top-3\/4 {
     top: calc(3/4 * 100%);
   }
