--- a/taigenteikoku/src/output.css
+++ b/taigenteikoku/src/output.css
@@ -194,12 +194,6 @@
   .top-0 {
     top: calc(var(--spacing) * 0);
   }
-  .top-1\/2 {
-    top: calc(1/2 * 100%);
-  }
-  .top-1\/3 {
-    top: calc(1/3 * 100%);
-  }
   .top-2\/5 {
     top: calc(2/5 * 100%);
   }
@@ -241,6 +235,9 @@
   }
   .mt-2 {
     margin-top: calc(var(--spacing) * 2);
+  }
+  .mt-6 {
+    margin-top: calc(var(--spacing) * 6);
   }
   .-mb-1 {
     margin-bottom: calc(var(--spacing) * -1);
@@ -323,6 +320,12 @@
   .w-48 {
     width: calc(var(--spacing) * 48);
   }
+  .w-\[120px\] {
+    width: 120px;
+  }
+  .w-\[240px\] {
+    width: 240px;
+  }
   .w-\[340px\] {
     width: 340px;
   }
@@ -392,6 +395,9 @@
   }
   .flex-row {
     flex-direction: row;
+  }
+  .content-between {
+    align-content: space-between;
   }
   .items-center {
     align-items: center;
@@ -623,6 +629,9 @@
   }
   .opacity-50 {
     opacity: 50%;
+  }
+  .opacity-80 {
+    opacity: 80%;
   }
   .opacity-100 {
     opacity: 100%;
